# gloss

./: .gitignore  .isort.cfg  gloss-black.py  keybindings.py  license-gloss.txt  makefile  mypy.ini  package.json  pyrightconfig.json  pythonstartup.py  readme.md  setup.cfg  summarize-syntax.py  summarize-vscode-themes.py  swift.py  tmlanguage-notes.txt  usercustomize.py
.zed/: settings.json
bash/: gloss_env.bash  gloss_sh_aliases.bash  gloss_sh_utils.bash
configurations/: gitconfig  gloss.terminal  mac-defaults.sh  noatime.plist  noatime.sh
doc/: git-notes.txt  vscode.md  vscode.txt
dotfiles/: inputrc  isort.cfg  sqliterc  tmux.conf  zprofile  zshenv  zshrc
ghostty/: config.ghostty
install/: _gloss_install_common.py  defaults-write-PATH.sh  gloss-install-dotfile-aliases.sh  gloss-install-mac-brew-py.sh  gloss-install-sys.py  gloss-install-user.py  gloss-install-vscode.sh
keybindings/: Default.idekeybindings  mac-keybindings.py  vscode-keys.txt
keys/: NSEventKeys.py  NSResponder.txt  gloss-xcode.idebindings  mac-keybindings.py  vscode-keys-default.json  vscode-keys.txt
paths/: 40-python.txt  70-homebrew.txt
sh/: gloss_env.bash  gloss_sh_aliases.bash  gloss_sh_exports.bash  prepend-to-search-path.py
syntaxes/: swift-gloss.json
themes/: gloss-black.json
user-styles/: github.com.css
vscode/: copy-user-settings.sh  extensions.txt  keybindings-default.json  keybindings.py  keys.txt  package.json  settings.json  vscode-keys-default.json  vscode-keys.txt
zed/: keymap-default.json  keymap-default.jsonc  keymap.json  keymap.jsonc  keymap.py  readme.md
(+15 files in other folders)
