# Dedicated to the public domain under CC0: https://creativecommons.org/publicdomain/zero/1.0/.

[metadata]
name = gloss
version = 0.0.0
license = CC0
author = George King
author_email = george.w.king@gmail.com
url = https://github.com/gwk/gloss
description = Programming environment configuration.

[build]
build-base = _build

[sdist]
dist-dir = _build
